[package]
name = "qpu"
version = "0.1.0"
authors = ["Andrew Halle <ahalle@berkeley.edu>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
nalgebra = "0.21.1"
num-complex = "0.2.4"
approx = { version = "0.3.2", features = ["std", "num-complex"] }
